--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "devDependencies": {
     "css-loader": "3.4.2",
     "html-webpack-plugin": "3.2.0",
-    "react-styleguidist": "11.0.1",
     "source-map-loader": "0.2.4",
     "style-loader": "1.1.3",
     "ts-loader": "6.2.1",
@@ -40,6 +39,7 @@
     "@types/react-dom": "16.9.5",
     "classnames": "2.2.6",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "react-styleguidist": "11.0.2"
   }
 }
